ref: project structure